<resources>
    <string name="app_name">Motorama</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="Motorama">motorama</string>
    <string name="o_seu_controle_de_gastos">O seu controle de gastos</string>
    <string name="motorama">Motorama</string>
    <string name="cadastrarMoto">Cadastrar</string>
    <string name="informe_os_dados_do_veiculo">Informe os Dados do Veículo</string>
    <string name="nenhum_veiculo_encontrado">Nenhum veículo encontrado - Toque no  + para adicionar seu primeiro veículo</string>
    <string name="nenhum_veiculo_encontrado_2">Nenhum Veículo Encontrado</string>
    <string name="toque_no_mais">Toque no + para adicionar seu primeiro veículo</string>
    <string name="title_activity_sobre">Sobre</string>
    <string name="seus_veiculos">Seus Veículos</string>
    <string name="marca">Marca</string>
    <string name="modelo">Modelo</string>
    <string name="placa">Placa</string>
    <string name="ano">Ano</string>
    <string name="nova_moto">Nova Moto</string>
    <string name="adicionar_gasto">Adicionar</string>
    <string name="descricao">Descrição</string>
    <string name="troca_de_oleo">Troca de óleo</string>
    <string name="comentario">Comentário</string>
    <string name="foi_troca_o_oleo_do_motor">Foi trocado o óleo do motor</string>
    <string name="odometro">Odômetro</string>
    <string name="odometro_km">Odômetro (KM)</string>
    <string name="ocorrencia">Ocorrência</string>
    <string name="moto">Moto</string>
    <string name="valor">Valor R$</string>
    <string name="data">Data</string>
    <string name="deletar">Deletar</string>
    <string name="novo_gasto">Novo Gasto</string>
    <string name="alterar_moto">Alterar Moto</string>
    <string name="alterar">Alterar</string>
    <string name="alterar_despesa">Alterar Despesa</string>
    <string name="meus_veiculos">Meus Veículos</string>
    <string name="meus_gastos">Meus Gastos</string>
    <string name="sobre_o_motorama">Sobre o Motorama</string>
    <string name="cancelar">Cancelar</string>
    <string name="apagar">Apagar</string>
    <string name="editar">Editar</string>
    <string name="confirmacao">Confirmação</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="configuracoes">Configurações</string>
    <string name="idioma">Idioma</string>
    <string name="portugues">Português</string>
    <string name="ingles">Inglês</string>
    <string name="salvar">Salvar</string>
    <string name="informacoes_e_suporte">Informações e Suporte</string>
    <string name="detalhes">Detalhes</string>
    <string name="modelo_vazio">Campo modelo está vazio</string>
    <string name="marca_vazia">Campo marca está vazia</string>
    <string name="campo_placa_vazio">Campo placa está vazio</string>
    <string name="campo_ano_vazio">Campo ano vazio</string>
    <string name="campo_comentario_vazio">Campo comentario vazio</string>
    <string name="campo_descricao_vazio">Campo descrição vazio</string>
    <string name="campo_data_vazio">Campo data está vazio</string>
    <string name="sobre_aplicacao">Sobre a aplicação</string>
    <string name="sobre_autor">Sobre o Autor</string>
    <string name="contato">Contato</string>
    <string name="texto_autor">Eu sou Gabriel Grazionale, nasci em Maringá e a programação para mim representa meu futuro. Essa aplicação foi desenvolvida com objetivo de obtenção da nota do projeto final da disciplina de Dispositivos Móveis da Universidade Técnológica Federal do Paraná.</string>
    <string name="texto_app">O Motorama tem como objetivo facilitar e ajudar no controle de gastos de motocicletas. O usuário poderá adicionar seus veículos e cadastrar seus gastos. Além disso, poderá visualizar seus gastos por motocicletas ou o conjunto total de gastos.</string>
    <string name="celular">Celular:</string>
    <string name="email">E-mail</string>
    <string name="emaill">Email:</string>
    <string name="gastos_da_moto">Gastos da Moto</string>

    <string-array name="ocorrencias">
        <item>Bateria</item>
        <item>Cambio</item>
        <item>Direção</item>
        <item>Elétrica</item>
        <item>Filtros</item>
        <item>Iluminação</item>
        <item>Motor</item>
        <item>Pneus</item>
        <item>Radiador</item>
        <item>Óleo</item>
        <item>Outros</item>
    </string-array>
</resources>
